# GL3DProjectSkeleton

./: .gitmodules  CMakeLists.txt  cmakeVoxel.bat
Libraries/: CMakeLists.txt
Libraries/GLAD/include/glad/: glad.h
Libraries/GLAD/src/: glad.c
Source/: Camera.cpp  Camera.h  GX.cpp  GX.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  RenderSettings.cpp  RenderSettings.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  Window.cpp  Window.h  World.cpp  World.h  main.cpp  stb_image.h
Source/Shaders/: test1.fs.glsl  test1.vs.glsl
